Added jvmArgs to precompiled Gradle plugin